SERVER-18813 move check for stale config in to aggRunCommand